feat: 🦾 Rota /indexing para gerar os index no mongodb
