# internal/adapter/handler/http/routes/indexing_routes.go
@@ -3,22 +3,23 @@ package routes
 import (
 	"github.com/gofiber/fiber/v2"
 
+	_ "desafio_taghos/docs"
 	"desafio_taghos/infra/database"
 	handler "desafio_taghos/internal/adapter/handler/http"
 	repository "desafio_taghos/internal/adapter/repository/mongodb"
 	"desafio_taghos/internal/core/service"
 )
 
-// BookRouter gerencia as rotas
+// IndexRouter gerencia as rotas
 // @Summary Rotas
-// @Description Rotas para gerenciamento dos Books
-func BookRouter(app fiber.Router) {
+// @Description Rotas para gerenciamento da indexação do banco de dados
+func IndexingRouter(app fiber.Router) {
 	db := database.MongoDB
 
 	// Injeção de dependências
 	bookRepo := repository.NewBookMongoRepository(db)
-	bookService := service.NewBookService(bookRepo)
-	bookHandler := handler.NewBookHandler(bookService)
+	indexingService := service.NewIndexingService(bookRepo)
+	indexingHandler := handler.NewIndexingHandler(indexingService)
 
-	app.Post("/book/create", bookHandler.CreateBook)
+	app.Get("/indexing/book", indexingHandler.CreateIndexesBook)
 }
